--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "loader-utils": "^3.2.1"
+    "loader-utils": "^3.2.1",
+    "nth-check": "^2.1.1"
   }
 }
